--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
     "aws-sdk": "^2.472.0",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
-    "path": "^0.12.7"
+    "jquery": "^3.4.1",
+    "path": "^0.12.7",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
